Adjust button font size and font weight.

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -6,8 +6,8 @@
     border-bottom-left-radius: 9999px; 
     line-height: 1; 
     padding: 1em 14px; 
-    font-size: 12px; 
-    font-weight: 500; 
+    font-size: 14px; 
+    font-weight: 600; 
     cursor: pointer; 
     transition: all 0.2s; 
     font-family: Raleway, sans-serif; 
@@ -28,8 +28,8 @@
     border-bottom-left-radius: 9999px; 
     line-height: 1; 
     padding: 1em 14px; 
-    font-size: 12px; 
-    font-weight: 500; 
+    font-size: 14px; 
+    font-weight: 600; 
     cursor: default; 
     transition: all 0.2s; 
     font-family: Raleway, sans-serif; 
@@ -49,8 +49,8 @@
     border-bottom-left-radius: 9999px; 
     line-height: 1; 
     padding: 1em 14px; 
-    font-size: 12px; 
-    font-weight: 500; 
+    font-size: 14px; 
+    font-weight: 600; 
     cursor: pointer; 
     transition: all 0.2s; 
     font-family: Raleway, sans-serif; 
@@ -71,8 +71,8 @@
     border-bottom-left-radius: 9999px; 
     line-height: 1; 
     padding: 1em 14px; 
-    font-size: 12px; 
-    font-weight: 500; 
+    font-size: 14px; 
+    font-weight: 600; 
     cursor: default; 
     transition: all 0.2s; 
     font-family: Raleway, sans-serif; 
@@ -90,8 +90,10 @@
     border-top-right-radius: 9999px; 
     border-bottom-right-radius: 9999px; 
     border-bottom-left-radius: 9999px; 
-    line-height: 1; padding: 1em 14px; 
-    font-size: 12px; font-weight: 500; 
+    line-height: 1; 
+    padding: 1em 14px; 
+    font-size: 14px; 
+    font-weight: 600; 
     cursor: pointer; 
     transition: all 0.2s; 
     font-family: Raleway, sans-serif; 
@@ -112,8 +114,8 @@
     border-bottom-left-radius: 9999px; 
     line-height: 1; 
     padding: 1em 14px; 
-    font-size: 12px; 
-    font-weight: 500; 
+    font-size: 14px; 
+    font-weight: 600; 
     cursor: default; 
     transition: all 0.2s; 
     font-family: Raleway, sans-serif; 
@@ -133,8 +135,8 @@
     border-bottom-left-radius: 9999px; 
     line-height: 1; 
     padding: 6px 14px; 
-    font-size: 12px; 
-    font-weight: 500; 
+    font-size: 14px; 
+    font-weight: 600; 
     cursor: pointer; 
     transition: all 0.2s; 
     font-family: Raleway, sans-serif; 
@@ -150,8 +152,8 @@
     border-bottom-left-radius: 9999px; 
     line-height: 1; 
     padding: 6px 14px; 
-    font-size: 12px; 
-    font-weight: 500; 
+    font-size: 14px; 
+    font-weight: 600; 
     cursor: default; 
     transition: all 0.2s; 
     font-family: Raleway, sans-serif; 
